tests/fixtures/pass/rename-spec-files/.chous
rename tests/**/*.spec.ts to tests/**/*.test.ts
