tests/fixtures/fail/rename-dir-violation/.chous
rename test, specs, spec to tests
